infrastructure/configs/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn
  annotations:
    external-dns.kubernetes.io/hostname: longhorn.local.icutum.es
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cert-manager-cluster-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.local.icutum.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.local.icutum.es
      secretName: longhorn-local-icutum-es-tls
